@@ -24,13 +24,15 @@
  * SOFTWARE.
  */
 
-#include "pyqpp_common.h"
+#ifndef PYQPP_RANDOM_BIND_HPP_
+#define PYQPP_RANDOM_BIND_HPP_
 
-/* Constants from constants.hpp */
-void init_constants(py::module_& m) {
+/* Some free functions (non-exhaustive list) from random.hpp */
+inline void init_random(py::module_& m) {
     using namespace qpp;
 
-    m.attr("ee") = qpp::ee;
-    m.def("omega", &qpp::omega, "D-th root of unity", py::arg("D"));
-    m.attr("pi") = qpp::pi;
+    m.def("randU", &qpp::randU, "Generates a random unitary matrix",
+          py::arg("D") = 2);
 }
+
+#endif /* PYQPP_RANDOM_BIND_HPP_ */
