@@ -23,7 +23,8 @@ for line in p.stdout.read().decode('ascii').split('\n'):
 if eigen_path is None:
     raise Exception('Eigen3 not found!')
 
-source_files = [f for f in sorted(glob("pyqpp/**/*.cpp", recursive=True))]
+#source_files = [f for f in sorted(glob("pyqpp/**/*.cpp", recursive=True))]
+source_files = ["pyqpp/qpp_wrapper.cpp"]
 ext_modules = [
     Pybind11Extension(
         "pyqpp",
